2008-07-10  Sam Steingold  <sds@gnu.org>

	* encoding.d (error_nls_invalid): print function name
	* pathname.d (check_no_wildcards): ditto

2008-07-10  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): fix a GC-safety bug
	 (save function before subsstring)
	* foreign.d (check_faddress_valid): fix a GC-safety bug
	 (check_fpointer can trigger GC!)
	(validate_fpointer): return the argument
	(convert_to_foreign): fix a GC-safety bug
	 (validate_fpointer can trigger GC)
	* modules/clx/new-clx/clx.f (XLIB:SCREEN-SAVER): fix a GC-safety bug
	 (defcheckers are GC-unsafe)

2008-07-10  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2015118 ]: (ash 1 huge) blows SP instead of signaling
	an arithmetic-error
	* intlog.d (I_I_ash_I): tighten the shift check (use 16-bit intW
	instead of 32-bit intWC) so that the "shift is too large"
	error is signaled instead of a SP overflow which results from
	__builtin_alloca not checking its argument and overwriting stack

2008-07-09  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1385641 ]: g++ debug_gcsafety amd64 build is broken
	* lispbibl.d (pgci_pointable, ngci_pointable) [DEBUG_GCSAFETY]:
	pass obj.one_o through pointable_address_unchecked before nonimmprobe
	(cgci_types_pointable, pgci_types_pointable, ngci_types_pointable)
	[TYPECODES & DEBUG_GCSAFETY]: wrap ?gci_pointable in
	pointable_address_unchecked

2008-07-09  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (UL_to_I) [DEBUG_GCSAFETY & intLsize<=oint_data_len]:
	fix export the definition to clisp.h

2008-07-09  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (STAT-VFS):
	use the right SIZEOF_* conditionals
	(FILE_FUNCTION2): add a cast to fix g++ compilation

2008-07-09  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2014262 ]: float/rational comparison underflows
	* realelem.d (R_R_comp): inhibit floating-point-underflow when
	converting to a rational

2008-07-08  Sam Steingold  <sds@gnu.org>

	* spvw_sigcld.d (end_want_sigcld): avoid the gcc warning: