@@ -627,10 +627,8 @@ following command:
   <olink targetdoc="man" targetptr="opt-enc"/>.</para>
 
 <para>This may also be caused by filesystem access.
- If your &path-enc; is set incorrectly, many filesystem accesses (like
- &load;, &directory; etc) will raise this error.
- Note that &load; will traverse the directories mentioned in &load-paths;
- - this applies to the <link linkend="faq-rc">init (RC) file</link> too.
+ If you have files names incompatible with your &path-enc;,
+ filesystem access (e.g., &directory;) will signal this error.
  You will need to set &path-enc; or pass &opt-E; to &clisp;.
  Using a <quote>1:1</quote> encoding, such as &iso-8859-1;,
  should help you avoid this error.</para>
